# aca-civilization-os

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
aca-edge-ros2/: README.md  package.xml  setup.cfg  setup.py
aca-edge-ros2/config/: README.md  robot_profile.example.yaml
aca-edge-ros2/launch/: safety_gate.launch.py  stack.launch.py  telemetry_bridge.launch.py
aca-edge-ros2/src/safety_gate/: __init__.py  node.py
aca-edge-ros2/src/telemetry_bridge/: __init__.py  node.py
aca-kernel-core/: .env.example  Dockerfile  docker-compose.yml
aca-kernel-core/src/audit/: __init__.py  ledger.py
aca-kernel-core/src/civilization/: __init__.py  service.py
aca-kernel-core/src/court/: __init__.py  judge.py
aca-kernel-core/src/gateway/: main.py
aca-kernel-core/src/memory/: __init__.py  store.py
docs/: 00_civilization_blueprint_v1.md  01_architecture_overview.md  02_mathematical_core.md  03_security_threat_model.md  04_data_contracts_schema.md  05_civilization_blueprint_v1_3_robot_os.md  06_changelog_v1_to_v1_3.md  07_vision_brief.md  08_technical_whitepaper.md  09_architecture_rfc.md  10_external_pitch_pack.md  11_roadmap_and_contribution.md  12_memory_and_court.md  13_memory_court_audit_trail.md  14_gap_analysis_and_next_steps.md
scripts/: demo_end_to_end.py
tests/: test_civilization_service.py  test_edge_modules.py  test_gateway_contracts.py  test_memory_and_court.py
