<?xml version="1.0"?>
<package format="3">
  <name>aca-edge-ros2</name>
  <version>1.3.2</version>
  <description>ACA edge ROS 2 stack for telemetry bridging and safety gating.</description>
  <maintainer email="ghalangwh.official@gmail.com">ghalangwh.official</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
